@@ -1,3 +1,9 @@
+3 Aug 2009 (svn.debian.org/tux4kids - revision 1348)
+[Sarah Frisk <ssfrisk@gmail.com> ]
+	- Fixed drawing issues.  Program now correctly loads Word List Editor Main screen
+	after going to the word list editor and/or using various other buttons (New Word 
+	List)
+
 3 Aug 2009 (svn.debian.org/tux4kids - revision 1346)
 [Sarah Frisk <ssfrisk@gmail.com> ]
 	- Added button text
